# project_12_django_storage

./: .gitignore  Dockerfile  Dockerfile2  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  test.py
nginx/: Dockerfile  default.conf  letsencript.conf
storage/: .env.template
storage/contractors/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
storage/contractors/fixtures/: contractors_contractor.json
storage/contractors/migrations/: 0001_initial.py  0002_alter_contractor_options_and_more.py  0003_alter_contractor_email.py
storage/contractors/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
storage/contracts/: admin.py  execution.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
storage/contracts/fixtures/: contracts_action.json  contracts_contract.json  contracts_payment.json  contracts_specification.json
storage/contracts/migrations/: 0001_initial.py  0002_alter_contract_created_at.py  0003_rename_planned_date_contract_date_plan_and_more.py  0004_alter_specification_contract.py  0005_specification_storage_item_and_more.py  0013_action.py  (+11 more)
storage/fill_base/: fillers.py  names.py  view_to_func.py
storage/products/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
storage/storage/: __init__.py  notification.py  other_handler.py  settings.py  urls.py
storage/storage_items/: admin.py  apps.py  models.py  urls.py  views.py
storage/templates/: base copy.html  base.html  pagination.html  thrash
storage/users/: context_processors.py  forms.py  urls.py  views.py
(+75 files in other folders)
